--- a/myapp/src/app/admin/admin.component.html
+++ b/myapp/src/app/admin/admin.component.html
@@ -15,6 +15,7 @@
             <td>{{ user.firstname }}</td>
             <td>{{ user.lastname }}</td>
             <td><button class="btn btn-danger" (click)="deletUser(user.id)">Delete</button></td>
+            <td><button class=" button btn btn-primary" (click)="editUser(user)">Edit</button></td>
             <!-- <td><button class="btn btn-danger" (click)="editUser(user.id)">Edit</button></td> -->
         
           </tr>
