--- a/myapp/src/app/register/register.component.html
+++ b/myapp/src/app/register/register.component.html
@@ -14,6 +14,7 @@
     <input type="password" id="password" formControlName="password" required><br>
   
     <button type="submit">Register</button>
+    <button routerLink="/login">Login</button>
   </form>
   </div>
   <div *ngIf=!showform class="container">
